Wed Nov 21 18:02:49 PST 2001  Brendan Conoboy <blc@redhat.com>

	* lib/rsh.exp: Obey rsh_prog/rcp_prog, support username
	* lib/remote.exp: same.

2002-02-22  Bob Wilson  <bob.wilson@acm.org>

        * baseboards/xtensa-sim.exp: New file.

2001-11-02  Alexandre Oliva  <aoliva@redhat.com>

        * lib/libgloss.exp [get_multilibs]: Compute multitop earlier, and
        use --print-multi-directory if available.

2002-02-05  Nick Clifton  <nickc@cambridge.redhat.com>

        * lib/libgloss.exp (g++_include_flags): Add top level
        libstdc++-v3 build include path, remove duplicate src path.
        (libstdc++_include_flags): Add top level libstdc++-v3 build
        include path.

2001-11-10  Hans-Peter Nilsson  <hp@bitrange.com>  

        * baseboards/mmixware-sim.exp: New file.   
	* lib/remote.exp (check_for_board_status): Return 2 if the board
	uses a status wrapper and there was no match for the expected
        pattern.


2001-11-02  Philip A. Wilsey  <philip.wilsey@cliftonlabs.com>
	* lib/utils.exp: Need to pass -all to getdirs, so it descends
	through all the subdirectories.
	
2001-10-08  Gwenole Beauchesne  <gbeauchesne@mandrakesoft.com>

        * runtest.exp: Don't fail at processing Makefile style args in the
        second command line parsing pass. Actually, skip them in this pass
        since they are already processed in the first one for possible use
        by init scripts.

2001-10-02  Nick Clifton  <nickc@cambridge.redhat.com>

        * lib/remote.exp (proc file_on_host): Fix typo in construction
        of file argument.

2001-09-12  Rob Savoye  <rob@peggyo.welcomehome.org>

	* Makefile.am: Add a clean-local target, and nuke example and
	testsuite from SUBDIRS, so they don't get built via "make all".
	* Makefile: All Makefiles regenerated.
	* debian/changelog: Update version for 1.4.2 release.
	* redhat/dejagnu.spec: Update version for 1.4.2 release.

2001-09-07  Will Cohen  <wcohen@redhat.com>
