@@ -1,0 +1,37 @@
+# Load the generic configuration for this board. This will define a basic
+# set of routines needed by the tool to communicate with the board.
+load_generic_config "sim";
+
+# basic-sim.exp is a basic description for the standard Cygnus simulator.
+load_base_board_description "basic-sim";
+
+# This tells it which directory to look in for the simulator.
+setup_sim mips;
+
+# No multilib flags are set by default.
+process_multilib_options "";
+
+# The compiler used to build for this board. This has *nothing* to do
+# with what compiler is tested if we're testing gcc.
+set_board_info compiler "[find_gcc]";
+#set_board_info needs_status_wrapper 1
+
+set_board_info cflags "[libgloss_include_flags] [newlib_include_flags]";
+set_board_info ldflags "[libgloss_link_flags] [newlib_link_flags]"; 
+
+# Use idt.
+if { [board_info $board obj_format] == "ecoff" } {
+    set_board_info ldscript "-Wl,-Tidtecoff.ld";
+} else {
+    set_board_info ldscript "-Wl,-Tidt32.ld";
+}
+
+# And, it can't do arguments, and doesn't have real signals.
+set_board_info noargs 1;
+set_board_info gdb,nosignals 1;
+
+# Tell gdb to assume no fpu for -msoft-float compilation
+if {[string match "*soft-float*" $current_target_name]} {
+  set_board_info gdb_init_command "set mipsfpu none"
+}
+
